manifest/k8s/external-oidc-provider.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-oidc-provider
  namespace: hyperauth
  labels:
    app: external-oidc-provider
  annotations:
#    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
#    traefik.ingress.kubernetes.io/service.sticky.cookie.name: hyperauth
#    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: external-oidc-provider
  type: ClusterIP   # ClusterIP or LoadBalancer or NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-oidc-provider
  namespace: hyperauth
  labels:
    app: external-oidc-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-oidc-provider
  template:
    metadata:
      labels:
        app: external-oidc-provider
    spec:
      volumes:
        - name: ssl
          secret:
            secretName: external-oidc-provider-https-secret
      containers:
        - name: hyperauth
          image: 192.168.9.12:5000/external-oidc-provider:0.5.1 #latest
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          volumeMounts:
            - name: ssl
              mountPath: /etc/x509/https
          readinessProbe:
#            httpGet:
#              path: /auth/realms/master
#              port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: external-oidc-provider
  namespace: hyperauth
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName : tmax-cloud
  tls:
    - hosts:  # Set Domain Name
        - tmax.initech.com
      secretName: external-oidc-provider-https-secret
  rules:  # Set Domain Name
    - host: tmax.initech.com
      http:
        paths:
          - backend:
              serviceName: external-oidc-provider
              servicePort: 8080
